[metadata]
name = python-solumclient
summary = Client library for Solum API
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-solumclient/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    solumclient
scripts =
    contrib/setup-tools/solum-app-setup.py

[entry_points]
console_scripts =
    solum = solumclient.solum:main

[compile_catalog]
directory = solumclient/locale
domain = solumclient

[update_catalog]
domain = solumclient
output_dir = solumclient/locale
input_file = solumclient/locale/solumclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solumclient/locale/solumclient.pot
